Kelsey Development Sandbox/src/objects/DS_Functioning_Forms_B__c.object
<CustomObject>
    <fields>
        <fullName>BFAPGAR1__c</fullName>
        <description>1. I am satisfied that I can turn to my family for help when something is troubling me.</description>
        <label>BFAPGAR1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BFAPGAR2__c</fullName>
        <description>2. I am satisfied with the way my family talks over things with me and shares problems with me.</description>
        <label>BFAPGAR2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BFAPGAR3__c</fullName>
        <description>3. I am satisfied that my family accepts and supports my wishes to take on new activities or directions.</description>
        <label>BFAPGAR3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BFAPGAR_MET__c</fullName>
        <label>BFAPGAR_MET</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BFAPGAR_RAW__c</fullName>
        <description>Raw score for fapgar questions 1-5.</description>
        <label>BFAPGAR_RAW</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BFEEDING__c</fullName>
        <description>Feeding</description>
        <label>BFEEDING</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIMRISK__c</fullName>
        <description>Immediate Risk</description>
        <label>BIMRISK</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPACAD__c</fullName>
        <description>Academic problems</description>
        <label>BISPACAD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPALC__c</fullName>
        <description>Alcohol use</description>
        <label>BISPALC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPATT__c</fullName>
        <description>Attachment problems</description>
        <label>BISPATT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPBEHH__c</fullName>
        <description>Behavior problems at home or community</description>
        <label>BISPBEHH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPBEHS__c</fullName>
        <description>Behavior problems in school or daycare</description>
        <label>BISPBEHS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPCRIM__c</fullName>
        <description>Criminal activity</description>
        <label>BISPCRIM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPCRRU__c</fullName>
        <description>In the past 30 days, how many times have you been arrested?</description>
        <label>BISPCRRU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPCRSP__c</fullName>
        <description>In the past 30 days, how many times have you been arrested? Specified</description>
        <inlineHelpText>Can not be more than 30</inlineHelpText>
        <label>BISPCRSP</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BISPCSA__c</fullName>
        <description>Commercial sexual exploitation</description>
        <label>BISPCSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPDISA__c</fullName>
        <description>Other medical problems or disabilities</description>
        <label>BISPDISA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPED__c</fullName>
        <description>Eating Disorder</description>
        <label>BISPED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPRUN__c</fullName>
        <description>Running away from home</description>
        <label>BISPRUN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPSA__c</fullName>
        <description>Substance abuse</description>
        <label>BISPSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPSINJ__c</fullName>
        <description>Other self-injurious behaviors</description>
        <label>BISPSINJ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPSKPS__c</fullName>
        <description>Problems skipping school or daycare</description>
        <label>BISPSKPS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPSUIC__c</fullName>
        <description>Suicidality</description>
        <label>BISPSUIC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BISPSXBE__c</fullName>
        <description>Developmentally inappropriate sexualized behavior</description>
        <label>BISPSXBE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTATT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attachment-based therapy Lifetime</description>
        <label>BLTATT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTBEH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Behavioral therapy Lifetime</description>
        <label>BLTBEH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTCASMG__c</fullName>
        <description>Case management or care coordination (Someone who helps the child get the services he/she needs) Lifetime</description>
        <label>BLTCASMG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTCHWE2__c</fullName>
        <description>Child welfare (excluding foster care) Lifetime</description>
        <label>BLTCHWE2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTCOGB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cognitive behavioral therapy Lifetime</description>
        <label>BLTCOGB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTCOG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cognitive therapy Lifetime</description>
        <label>BLTCOG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTDAYTR__c</fullName>
        <description>Day treatment program (A day program that includes a focus on therapy and may also provide education while the child is there) Lifetime</description>
        <label>BLTDAYTR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTDET__c</fullName>
        <description>Detention center, training school , jail, or prison Lifetime</description>
        <label>BLTDET</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTER__c</fullName>
        <description>Hospital emergency room (For problems related to trauma or emotional or behavioral problems) Lifetime</description>
        <label>BLTER</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTEXP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Expressive therapies (drawing, movement, theater) Lifetime</description>
        <label>BLTEXP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTFAM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Family therapy Lifetime</description>
        <label>BLTFAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTFOST__c</fullName>
        <description>Foster care (Placement in kinship or non-relative foster care) Lifetime</description>
        <label>BLTFOST</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTGROUP__c</fullName>
        <description>Group home (A group residence in a community setting) Lifetime</description>
        <label>BLTGROUP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTHEADS__c</fullName>
        <description>Head Start Program and service coordination Lifetime</description>
        <label>BLTHEADS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTHOMV__c</fullName>
        <description>Home Visiting Lifetime</description>
        <label>BLTHOMV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTINHME__c</fullName>
        <description>In-home counseling (Services, therapy, or treatment provided in the child&apos;s home) in past year</description>
        <label>BLTINHME</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTINPSY__c</fullName>
        <description>Inpatient psychiatric unit or a hospital for mental health problems Lifetime</description>
        <label>BLTINPSY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTMED__c</fullName>
        <description>Medication Management Lifetime</description>
        <label>BLTMED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTMEN__c</fullName>
        <description>Mentor Lifetime</description>
        <label>BLTMEN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTNAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Narrative therapy Lifetime</description>
        <label>BLTNAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTOTH__c</fullName>
        <description>Other Service Lifetime</description>
        <label>BLTOTH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTOUTPS__c</fullName>
        <description>Outpatient treatment from a psychiatrist Lifetime</description>
        <label>BLTOUTPS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTOUTTX__c</fullName>
        <description>Outpatient therapy other than at this clinic (From psychologist, social worker, therapist, or other counselor) in past year</description>
        <label>BLTOUTTX</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTPARED__c</fullName>
        <description>Parent education and skill-building programs Lifetime</description>
        <label>BLTPARED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTPEER__c</fullName>
        <description>Peer support.therapy Lifetime</description>
        <label>BLTPEER</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTPHAS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Phase-oriented trauma treatment Lifetime</description>
        <label>BLTPHAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTPLAY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Play therapy Lifetime</description>
        <label>BLTPLAY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTPRIMC__c</fullName>
        <description>Primary care physician/pediatrician (Excluding emergency room) Lifetime</description>
        <label>BLTPRIMC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTPROB__c</fullName>
        <description>Probation officer or court counselor Lifetime</description>
        <label>BLTPROB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTPSYAN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Psychoanalysis Lifetime</description>
        <label>BLTPSYAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTPSYDY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Psychodynamic psychotherapy Lifetime</description>
        <label>BLTPSYDY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTREC__c</fullName>
        <description>Therapeutic recreation services or mentor Lifetime</description>
        <label>BLTREC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTRES__c</fullName>
        <description>Residential treatment center (A self-contained treatment facility where the child lives and goes to school) Lifetime</description>
        <label>BLTRES</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTSCHCN__c</fullName>
        <description>School counselor, school psychologist, or school social worker (For behavioral or emotional problems) Lifetime</description>
        <label>BLTSCHCN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTSELFH__c</fullName>
        <description>Self-help groups (e.g., AA, NA) Lifetime</description>
        <label>BLTSELFH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTSOCSE__c</fullName>
        <description>Social Services other than child welfare (e.g., TANF, food stamps, child care) Lifetime</description>
        <label>BLTSOCSE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTSOCSK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Social skills training Lifetime</description>
        <label>BLTSOCSK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTSOL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Solution-focused therapy Lifetime</description>
        <label>BLTSOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTSPCL__c</fullName>
        <description>Special class, special school or Early Intervention services (For all or part of the day) Lifetime</description>
        <label>BLTSPCL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLTSTRE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stress management/relaxation training Lifetime</description>
        <label>BLTSTRE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTSUPP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Supportive therapy Lifetime</description>
        <label>BLTSUPP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTTOTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Other outpatient therapy/ treatment lifetime</description>
        <label>BLTTOTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLTTXFOS__c</fullName>
        <description>Treatment foster care (Placement with foster parents who receive special training and supervision to help children with problems) Lifetime</description>
        <label>BLTTXFOS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>